fix: some icons don't respect the `UI icon size` setting. some minor UI improvement